
[project]
name = "synthesis_lido_stethtreasury"
version = "0.1.0"
description = "A guarded treasury that keeps principal untouchable while letting agents spend only staking yield through target whitelists, caps, and time windows."
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
